--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,29 +1,85 @@
 ﻿<script src="https://d3js.org/d3.v5.min.js"></script>
 <h1>Results from the crawler</h1>
-<p class="d3"></p>
+<p class="graphs"></p>
 <!--<script src="./views/d3.js"></script>-->
-<!--<script>
-	var dataArray = [20, 40, 60, 80];
+<script>
 
-	var canvas = d3.select(".d3")
+	var data = [10];
+
+
+	var canvas = d3.select(".graphs")
 		.append("svg")
-		.attr("width", 1000)
-		.attr("height", 500);
+		.attr("width", 500)
+		.attr("height", 500)
 
-	var bars = canvas.selectAll("rect")
-		.data(dataArray)
-		.enter()
-			.append("rect")
-			.attr("width", function (d) { return d * 10; })
-			.attr("height", 50)
-			.attr("y", function (d, i) { return i * 100 });
+	var circle1 = canvas.append("circle")
+			.attr("cx", 50)
+			.attr("cy", 100)
+			.attr("r", 25); 
 
+	var c = circle1.transition()
+		.duration(1500)
+		.attr("cx", 400)
+		.attr('cy', 300)
+		.transition(c)
+			.attr("fill", "red")
+			.attr("cx", 50)
+			.attr("r", 50)
+		.transition()
+			.attr("fill", "cyan")
+			.attr("cx", 200)
+			.attr("cy", 150)
+			.attr("r", 150);
+
+
+
+
+
+
+
+
+	//var dataArray = [20, 40, 60, 80];
+	//var width = 500;
+	//var height = 500;
+
+	//var widthScale = d3.scaleLinear()
+	//	.domain([0, 80])
+	//	.range([0, width]);
+
+	//var color = d3.scaleLinear()
+	//	.domain([0, 60])
+	//	.range(["red", "blue"]);
+
+	//var xAxis = d3.axisBottom()
+	//	.ticks(5)
+	//	.scale(widthScale);
+
+	//var canvas = d3.select(".graphs")
+	//	.append("svg")
+	//	.attr("width", width)
+	//	.attr("height", height)
+	//	.append("g")
+	//	.attr("transform", "translate(20,0)")
+
+
+	//var bars = canvas.selectAll("rect")
+	//	.data(dataArray)
+	//	.enter()
+	//		.append("rect")
+	//		.attr("width", function (d) { return widthScale(d); })
+	//		.attr("height", 50)
+	//	.attr("fill", function (d) { return color(d) })
+	//		.attr("y", function (d, i) { return i * 100 });
+
+	//canvas.append("g")
+	//	.attr("transform", "translate(0,400)")
+	//	.call(xAxis);
 	//var circle = canvas.append("circle")
 	//	.attr('cx', 250)
 	//	.attr('cy', 250)
 	//	.attr('r', 50)
 	//	.attr("fill", "red");
-</script>-->
-<footer>
+</script>
+<!--<footer>
 	<script type="text/javascript" src="graphics.js"></script>
-</footer>
+</footer>-->
