Added practice page and folders, more graph practice

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -2,7 +2,7 @@
 <h1>Results from the crawler</h1>
 <p class="graphs"></p>
 <!--<script src="./views/d3.js"></script>-->
-<script>
+<!--<script>
 
 	var data = [10];
 
@@ -79,7 +79,7 @@
 	//	.attr('cy', 250)
 	//	.attr('r', 50)
 	//	.attr("fill", "red");
-</script>
-<!--<footer>
-	<script type="text/javascript" src="graphics.js"></script>
-</footer>-->
+</script>-->
+<footer>
+	<script type="text/javascript" src="js/graphics.js"></script>
+</footer>
