updated form and input fields of index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,26 +9,29 @@
 	<h1>Welcome to the Pavo group web crawler</h1>
 	<p>Enter some basic information to get started.</p>
 
-	<form action="">
-		<label>
-			Starting webpage:
-			<input type="text" name="startPage" size="30" maxlength="150" />
-		</label>
-		<label>
-			Number of links to search:
-			<input type="text" name="numberOfLinks" size="5" maxlength="10" />
-		</label>
-		<label>Search type:</label>
-		<select name="searchType" id="searchType">
-			<option value="depthFirst">Depth First</option>
-			<option value="breadthFirst">Breadth First</option>
-		</select>
-		<label>
-			Optional keyword:
-			<input type="text" name="keyword" size="15" maxlength="30" />
-		</label>
-		<br />
-		<input type="submit" value="Start the crawler" />
+	<form action="/crawl_web" method="post">	<!-- change action to url of server -->
+        <fieldset>
+            <label>
+                Starting webpage:
+                <input id="page" type="url" name="page" size="30" maxlength="150" />
+            </label>
+            <label>
+                Number of links to search:
+                <input id="limit" type="number" name="limit" size="5" maxlength="10" min="0" step="1" max="5" />
+            </label>
+            <label>Search type:</label>
+            <select name="method" id="method">
+                <option value="depth">Depth First</option>
+                <option value="breadth">Breadth First</option>
+            </select>
+            <label>
+                Optional keyword:
+                <input id ="keyword" type="text" name="keyword" size="15" maxlength="30" />
+            </label>
+            <br />
+            <input id="submitButton" type="submit" value="Start the crawler" />
+        </fieldset>
 	</form>
+
 <!--</body>
 </html>-->
